rook-operator.yml
# 1. First, create a namespace for Rook
apiVersion: v1
kind: Namespace
metadata:
  name: rook
---
# 2. Rook Operator deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rook-operator
  namespace: rook
  labels:
    operator: rook
    storage-backend: ceph
spec:
  selector:
    matchLabels:
      app: rook-operator
  replicas: 1
  template:
    metadata:
      labels:
        app: rook-operator
    spec:
      serviceAccountName: rook-system
      containers:
      - name: rook-operator
        image: rook/ceph:v1.12.6
        args: ["ceph", "operator"]
