portainer-ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  annotations:
    kubernetes.io/ingress.class: easyhaproxy-ingress
  name: portainer-ingress
  namespace: portainer
spec:
  rules:
  - host: portainer.xela.foo
    http:
      paths:
      - backend:
          service:
            name: portainer
            port:
              number: 9000
        pathType: ImplementationSpecific
