postgres-operator.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  annotations:
    kubernetes.io/ingress.class: easyhaproxy-ingress
  name: postgres-operator-ingress
  namespace: postgres
spec:
  rules:
  - host: sql.xela.foo
    http:
      paths:
      - backend:
          service:
            name: postgres-operator-ui
            port:
              number: 80
        pathType: ImplementationSpecific
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-operator
  namespace: postgres
  labels:
    application: postgres-operator
spec:
  replicas: 1
  strategy:
    type: "Recreate"
  selector:
    matchLabels:
      name: postgres-operator
  template:
    metadata:
      labels:
        name: postgres-operator
    spec:
      serviceAccountName: postgres-operator
      containers:
      - name: postgres-operator
        image: ghcr.io/zalando/postgres-operator:v1.13.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 250Mi
          limits:
            cpu: 500m
            memory: 500Mi
        securityContext:
          runAsUser: 1000
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-operator
  namespace: postgres
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: postgres-operator
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "postgres-operator-ui"
  namespace: postgres
  labels:
    name: "postgres-operator-ui"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: "postgres-operator-ui"
  template:
    metadata:
      labels:
        name: "postgres-operator-ui"
    spec:
      serviceAccountName: postgres-operator-ui
      containers:
        - name: "service"
          image: ghcr.io/zalando/postgres-operator-ui:v1.13.0
          ports:
            - containerPort: 8081
              protocol: "TCP"
          readinessProbe:
            httpGet:
              path: "/health"
              port: 8081
            initialDelaySeconds: 5
            timeoutSeconds: 1
          resources:
            limits:
              cpu: "200m"
              memory: "200Mi"
            requests:
              cpu: "100m"
              memory: "100Mi"
